squad-9-313: unit tests for clientsController.
- Changed configuration for testing environment
- Added cleanup sql and methods for unit testing
